tests/models/enum/unnamed/string/fail/ge.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(ge = 2)]
        String
    ),
}
fn main() {}
